--- a/clusters/default/django/deployment.yaml
+++ b/clusters/default/django/deployment.yaml
@@ -33,7 +33,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
-  namespace: default
+  namespace: nginx-service
 spec:
   selector:
     app: nginx
