--- a/clusters/home/default/nginx-policy.yaml
+++ b/clusters/home/default/nginx-policy.yaml
@@ -2,11 +2,11 @@
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImagePolicy
 metadata:
-  name: redis
+  name: nginx 
   namespace: flux-system
 spec:
   imageRepositoryRef:
-    name: redis
+    name: nginx 
   policy:
     semver:
       range: ">=0.0.0"
