--- a/clusters/home/default/nginx.yaml
+++ b/clusters/home/default/nginx.yaml
@@ -2,8 +2,8 @@
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImageRepository
 metadata:
-  name: redis
+  name: nginx 
   namespace: flux-system
 spec:
-  image: redis
+  image: jscorptech/test-nginx
   interval: 1m0s
