--- a/clusters/home/default/automation.yaml
+++ b/clusters/home/default/automation.yaml
@@ -19,7 +19,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: nginx 
   update:
     path: ./cluster/home
     strategy: Setters
