--- a/clusters/home/default/automation.yaml
+++ b/clusters/home/default/automation.yaml
@@ -19,6 +19,6 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: kub 
   update:
     path: ./clusters/home
