--- a/clusters/home/default/nginx-policy.yaml
+++ b/clusters/home/default/nginx-policy.yaml
@@ -2,11 +2,11 @@
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImagePolicy
 metadata:
-  name: nginx 
-  namespace: flux-system
+  name: django 
+  namespace: jst 
 spec:
   imageRepositoryRef:
-    name: nginx 
+    name: django 
   policy:
     semver:
       range: ">=0.0.0"
